AM_CXXFLAGS=$(SDL_CFLAGS) $(SDLIMG_CFLAGS) $(GL_CFLAGS) $(VORBISFILE_CFLAGS)
AM_LDFLAGS=$(SDL_LIBS) $(SDLIMG_LIBS) $(GL_LIBS) $(VORBISFILE_LIBS)
bin_PROGRAMS=tunnelblick
tunnelblick_SOURCES= \
  tunnelblick.cxx \
  game.cxx \
  tunnel.cxx \
  distortion.cxx \
  game_object.cxx \
  game_field.cxx \
  model.cxx \
  modelled_object.cxx \
  globals.cxx
