AM_CXXFLAGS=-Wall $(SDL_CFLAGS) $(SDLIMG_CFLAGS) $(GL_CFLAGS) $(VORBISFILE_CFLAGS)
AM_LDFLAGS=$(SDL_LIBS) $(SDLIMG_LIBS) $(GL_LIBS) $(VORBISFILE_LIBS)
bin_PROGRAMS=tunnelblick
tunnelblick_SOURCES= \
  tunnelblick.cxx \
  game.cxx \
  tunnel.cxx \
  distortion.cxx \
  game_object.cxx \
  game_field.cxx \
  model.cxx \
  modelled_object.cxx \
  player.cxx \
  projectile.cxx \
  enemy.cxx \
  cactus.cxx \
  fire_fern.cxx \
  beetle.cxx \
  pillar.cxx \
  enemy_factory.cxx \
  confetti.cxx \
  mixer.cxx \
  sound_effect.cxx \
  music_player.cxx \
  vorbis_decoder.cxx \
  globals.cxx
